--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -11,6 +11,14 @@ author_profile: true
 
 {% endif %}
 
-<p> TEST TEST </p>
-
+<p>My thesis work has been presented at the following conferences:</p>
+<ul>
+    <li><a href="https://na.eventscloud.com/website/40825/home/">ICSP2023</a></li>
+    <li><a href="https://cermics-lab.enpc.fr/seso2023/">SESO2023</a></li>
+    <li><a href="https://roadef2024.sciencesconf.org/">ROADEF2024</a></li>
+    <li><a href="https://euro2024cph.dk/">EURO2024</a></li>
+    <li><a href="https://ecso-cms2024.blogs.dsv.su.se/">ECSO2024</a></li>
+    <li><a href="https://ismp2024.gerad.ca/">ISMP2024</a></li>
+    <li><a href="https://roadef2025.org/">ROADEF2025</a></li>
+</ul>
 
